<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity"
    android:padding="24dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/string_auth_title"
        android:textSize="30sp"
        android:gravity="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_hint_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/textTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputEditText"
            android:hint="@string/string_hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/typeChipGroup"
        android:layout_marginTop="16dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/joinButton"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/typeChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_join"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/joinButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>