<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirebaseRecyclerViewActivity">

    <TextView
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textMedium"
        android:gravity="center"
        android:text="@string/title_menus"
        android:textColor="@color/black"/>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/textTotalCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSmall"
        android:text="@string/text_kcal"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textTotalGram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSmall"
        android:text="@string/text_grams"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/addOrRemoveButtonsLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sizeVerySmall"
        android:gravity="right"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/uploadButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/baseline_upload_24"
            android:layout_marginRight="10dp"
            />

        <ImageView
            android:id="@+id/foodAddButton"
            android:layout_width="@dimen/sizeVerySmall"
            android:layout_height="@dimen/sizeVerySmall"
            android:src="@drawable/baseline_add_24"
            android:layout_marginRight="@dimen/sizeBetween"
            />
        <ImageView
            android:id="@+id/foodRemoveButton"
            android:layout_width="@dimen/sizeVerySmall"
            android:layout_height="@dimen/sizeVerySmall"
            android:src="@drawable/baseline_remove_24"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/foodListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

</LinearLayout>